<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_configuracoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/healthToolBar"
        app:popupTheme="@style/healthToolBar" />


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".view.ConfiguracoesActivity"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/config_relative_layout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/config_peso_input"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:layout_alignParentLeft="true">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/config_peso"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:maxLength="3"
                            android:theme="@style/AppTheme"
                            android:hint="@string/peso_name" />
                    </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_unit"
                    android:layout_marginTop="26dp"
                    android:layout_marginRight="-20dp"
                    android:textSize="18sp"
                    android:layout_alignRight="@id/config_peso_input"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/config_altura_input"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_alignParentLeft="true"
                        android:animateLayoutChanges="true">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/config_altura"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:maxLength="3"
                            android:theme="@style/AppTheme"
                            android:hint="@string/altura_name"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altura_unit"
                        android:layout_marginTop="34dp"
                        android:textSize="18sp"
                        android:layout_marginRight="-23dp"
                        android:layout_alignRight="@id/config_altura_input"
                        />

                </RelativeLayout>

                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">

                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/config_idade_input"
                         android:layout_width="@dimen/edit_text"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_alignParentLeft="true"
                         android:animateLayoutChanges="true">
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/config_idade"
                             android:layout_height="match_parent"
                             android:layout_width="match_parent"
                             android:inputType="number"
                             android:maxLength="3"
                             android:theme="@style/AppTheme"
                             android:hint="@string/idade_name"
                             />
                     </android.support.design.widget.TextInputLayout>

                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/idade_unit"
                         android:layout_marginTop="34dp"
                         android:layout_marginRight="-38dp"
                         android:layout_alignRight="@id/config_idade_input"
                         android:textSize="18sp" />

                 </RelativeLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sexo"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/config_sexo_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme"
                        >

                    </android.support.v7.widget.AppCompatSpinner>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/freq_exercicios_name"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/config_exercicios_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme"
                        >

                    </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

