<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_configuracoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/healthToolBar"
        app:popupTheme="@style/healthToolBar" />


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".view.SettingsActivity"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/config_relative_layout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/settings_weight_input"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:layout_alignParentLeft="true">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/settings_weight_edt"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:maxLength="3"
                            android:theme="@style/AppTheme"
                            android:hint="@string/peso_name" />
                    </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_unit"
                    android:layout_marginTop="26dp"
                    android:layout_marginRight="-20dp"
                    android:textSize="18sp"
                    android:layout_alignRight="@id/settings_weight_input"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/settings_height_input"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_alignParentLeft="true"
                        android:animateLayoutChanges="true">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/settings_height_edt"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:maxLength="3"
                            android:theme="@style/AppTheme"
                            android:hint="@string/altura_name"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altura_unit"
                        android:layout_marginTop="34dp"
                        android:textSize="18sp"
                        android:layout_marginRight="-23dp"
                        android:layout_alignRight="@id/settings_height_input"
                        />

                </RelativeLayout>

                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">

                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/settings_age_input"
                         android:layout_width="@dimen/edit_text"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_alignParentLeft="true"
                         android:animateLayoutChanges="true">
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/settings_age_edt"
                             android:layout_height="match_parent"
                             android:layout_width="match_parent"
                             android:inputType="number"
                             android:maxLength="3"
                             android:theme="@style/AppTheme"
                             android:hint="@string/idade_name"
                             />
                     </android.support.design.widget.TextInputLayout>

                     <android.support.v7.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/idade_unit"
                         android:layout_marginTop="34dp"
                         android:layout_marginRight="-38dp"
                         android:layout_alignRight="@id/settings_age_input"
                         android:textSize="18sp" />

                 </RelativeLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/settings_gender_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme"
                        >

                    </android.support.v7.widget.AppCompatSpinner>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/freq_exercicios_name"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/settings_physical_act_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme"
                        >

                    </android.support.v7.widget.AppCompatSpinner>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fab_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/fab_save"
                            android:onClick="save"/>
                    </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

